--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,29 +13,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.1",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@types/axios": "^0.14.4",
     "@types/mapbox-gl": "^2.7.21",
-    "axios": "^1.6.7",
-    "mapbox-gl": "^3.1.2",
+    "@types/react-redux": "^7.1.34",
+    "axios": "^1.8.4",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1",
-    "tailwindcss": "^3.4.1",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1"
+    "react-leaflet": "^5.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@fontsource/inter": "^5.2.5",
+    "@types/leaflet": "^1.9.16",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
