--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,17 +16,20 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.0.15",
     "@types/axios": "^0.14.4",
     "@types/mapbox-gl": "^2.7.21",
     "@types/react-redux": "^7.1.34",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.8.4",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@fontsource/inter": "^5.2.5",
@@ -36,10 +39,13 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "crypto-browserify": "^3.12.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
