--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,15 +20,19 @@
     "@types/axios": "^0.14.4",
     "@types/mapbox-gl": "^2.7.21",
     "@types/react-redux": "^7.1.34",
+    "@types/recharts": "^1.8.29",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.10.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.1",
+    "recharts": "^2.15.1",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
