--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ Django==4.2.10
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 python-dotenv==1.0.1
+djangorestframework-simplejwt==5.3.1
 
 requests==2.31.0
 python-dateutil==2.8.2
