--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.483.0",
     "mapbox-gl": "^3.10.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -52,6 +53,7 @@
     "@types/leaflet": "^1.9.16",
     "@types/node": "^22.13.11",
     "@types/react": "^18.2.55",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
