--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -7,8 +7,5 @@
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "env": {
-    "VITE_API_URL": "https://your-zappa-domain.execute-api.us-east-1.amazonaws.com/production"
-  }
+  "framework": "vite"
 } 
