--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,4 +10,5 @@ gunicorn==21.2.0
 whitenoise==6.6.0
 dj-database-url==2.1.0
 Pillow==10.4.0
-psycopg2-binary==2.9.9 
+psycopg2-binary==2.9.9
+Werkzeug==3.0.1 
